logs/Slang/generated/hdlconv/hdlconvertor_p628.sv.log
name: hdlconvertor_p628
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p628.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p628.sv:3:1: error: expected member
pulldown (pd);
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p628.sv:9:36: error: use of undeclared identifier 'pd'
$display("pd strength value is %v",pd);
                                   ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p628.sv:12:35: error: use of undeclared identifier '$time'
$display("simulation time is %t", $time);
                                  ^~~~~
